--- a/src/main/resources/templates/user/fragments/footer.html
+++ b/src/main/resources/templates/user/fragments/footer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <!-- START FOOTER -->
 <footer class="footer_dark" th:fragment="footerFragment">
 	<div class="footer_top">
@@ -36,6 +36,18 @@
 
 					</div>
 				</div>
+				
+				<div class="col-lg-2 col-md-3 col-sm-3 pc-show" sec:authorize="isAnonymous()">
+					<div class="widget">
+						<h6 class="widget_title">시프트삼</h6>
+						<ul class="widget_links">
+							<li><a href="/mypage/notice">공지사항</a></li>
+							<li><a href="/mypage/cs">고객센터</a></li>
+							<li><a href="/introduce">서비스소개</a></li>
+						</ul>
+					</div>
+				</div>
+
 				<div class="col-lg-2 col-md-3 col-sm-3 pc-show">
 					<div class="widget">
 						<h6 class="widget_title">소메뉴</h6>
@@ -60,16 +72,15 @@
 					</div>
 				</div>
 
-				<div class="col-lg-2 col-md-3 col-sm-3 pc-show">
+				<div class="col-lg-2 col-md-3 col-sm-3 pc-show" sec:authorize="isAuthenticated()">
 					<div class="widget">
-						<h6 class="widget_title">소메뉴</h6>
+						<h6 class="widget_title">마이페이지</h6>
 						<ul class="widget_links">
-							<li><a href="#">메뉴명</a></li>
-							<li><a href="#">메뉴명</a></li>
-							<li><a href="#">메뉴명</a></li>
-							<li><a href="#">메뉴명</a></li>
-							<li><a href="#">메뉴명</a></li>
-							<li><a href="#">메뉴명</a></li>
+							<li><a href="/mypage">회원정보 수정</a></li>
+							<li><a href="/mypage/dips">찜목록</a></li>
+							<li><a href="/mypage/notice">공지사항</a></li>
+							<li><a href="/mypage/cs">고객센터</a></li>
+							<li><a href="/introduce">서비스소개</a></li>
 						</ul>
 					</div>
 				</div>
