--- a/src/main/resources/templates/user/fragments/footer.html
+++ b/src/main/resources/templates/user/fragments/footer.html
@@ -36,7 +36,7 @@
 
 					</div>
 				</div>
-				
+
 				<div class="col-lg-2 col-md-3 col-sm-3 pc-show" sec:authorize="isAnonymous()">
 					<div class="widget">
 						<h6 class="widget_title">시프트삼</h6>
@@ -44,6 +44,7 @@
 							<li><a href="/mypage/notice">공지사항</a></li>
 							<li><a href="/mypage/cs">고객센터</a></li>
 							<li><a href="/introduce">서비스소개</a></li>
+							<li><a href="/privacy.html">개인정보처리방침</a></li>
 						</ul>
 					</div>
 				</div>
@@ -81,6 +82,7 @@
 							<li><a href="/mypage/notice">공지사항</a></li>
 							<li><a href="/mypage/cs">고객센터</a></li>
 							<li><a href="/introduce">서비스소개</a></li>
+							<li><a href="/privacy.html">개인정보처리방침</a></li>
 						</ul>
 					</div>
 				</div>
