--- a/src/main/resources/templates/admin/content/pages/shop/create.html
+++ b/src/main/resources/templates/admin/content/pages/shop/create.html
@@ -59,6 +59,7 @@
 						<label class="form-label" for="openTime">운영시간</label>
 						<input type="text" id="openTime" th:field="*{operatingTime}" class="form-control"
 						       placeholder="00:00 ~ 00:00" required/>
+						<span class="text-muted">예시) 09:00 ~ 18:00</span>
 					</div>
 
 					<div class="col-6 mb-3">
@@ -415,6 +416,18 @@
                         span.setAttribute("class", "text-danger");
                         span.innerHTML = "주소를 검색 후 선택해주세요";
                         detailLocation.parentNode.appendChild(span);
+                        passValidation = false;
+                    }
+
+                    // openTime
+                    let openTime = document.querySelector("#openTime");
+                    // check valid format 00:00 ~ 00:00
+                    let openTimeRegex = new RegExp("^(0[0-9]|1[0-9]|2[0-3]):[0-5][0-9] ~ (0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$");
+                    if (!openTimeRegex.test(openTime.value)) {
+                        let span = document.createElement("span");
+                        span.setAttribute("class", "text-danger");
+                        span.innerHTML = "올바른 형식으로 입력해주세요.<br/>ex) 09:00 ~ 18:00<br/>공백에 유의해주세요.";
+                        openTime.parentNode.appendChild(span);
                         passValidation = false;
                     }
 
