--- a/src/main/resources/templates/user/content/pages/my-page/index.html
+++ b/src/main/resources/templates/user/content/pages/my-page/index.html
@@ -2,17 +2,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{/user/layout/mypage_layout}" lang="ko">
 
-    <div layout:fragment="content" class="content">
+<div layout:fragment="content" class="content">
 
-        <div class="card">
-            <div class="card-header">
-                회원 정보
-            </div>
-            <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-        </div>
-    </div>
+	<div class="card">
+		<div class="card-header">
+			회원 정보
+		</div>
+		<div class="card-body">
+			<h5 class="card-title">개발중..</h5>
+			<p class="card-text">개발중입니다.</p>
+			<a href="#" class="btn btn-primary">개발중...</a>
+		</div>
+	</div>
+</div>
 </html>
