--- a/src/main/resources/templates/user/layout/mypage_layout.html
+++ b/src/main/resources/templates/user/layout/mypage_layout.html
@@ -82,7 +82,7 @@
 			<!--                    <div class="col-md-3 col-sm-12 p-4 side"  style="border-right: 1px solid rgba(0,0,0,0.29)">-->
 			<div class="col-md-3 col-sm-12 p-4 side">
 				<div class="title mb-2" sec:authorize="isAuthenticated()">마이페이지</div>
-				<div class="title mb-2" sec:authorize="isAnonymous()">ㅁㄴㅇㅁㄴㅇ</div>
+				<div class="title mb-2" sec:authorize="isAnonymous()">시프트삼</div>
 				<br/>
 
 				<div class="menu">
