oAuth2 구현하고 이것저것~

--- a/src/main/resources/templates/admin/content/pages/contents/create.html
+++ b/src/main/resources/templates/admin/content/pages/contents/create.html
@@ -42,7 +42,7 @@
 						<option value="">카테고리</option>
 						<option value="전자기기">전자기기</option>
 						<option value="옷">옷</option>
-						<option value="음식">음식</option>
+						<option value="기타">기타</option>
 					</select>
 				</div>
 			</div>
