--- a/src/main/resources/templates/user/content/login.html
+++ b/src/main/resources/templates/user/content/login.html
@@ -38,6 +38,8 @@
 									<button type="submit" class="btn btn-fill-out btn-block" name="login">Log in
 									</button>
 									<p class="text-danger" th:if="${param.error}" th:text="'잘못된 이메일 혹은 비밀번호입니다.'"></p>
+									<p class="text-danger" th:if="${param.oauthError}"
+									   th:text="'SNS 계정으로 로그인 실패하였습니다.'"></p>
 								</div>
 							</form>
 							<div class="different_login">
@@ -47,7 +49,8 @@
 							<ul class="row sns-login list_none text-center g-0">
 								<div class="col-4">
 									<li>
-										<a href="https://kauth.kakao.com/oauth/authorize?client_id=10b4089090b3c8756eb564cabf6e1c81&redirect_uri=http://localhost:8080/login/oauth2/code/kakao&response_type=code"><i><img
+										<!--										<a href="https://kauth.kakao.com/oauth/authorize?client_id=10b4089090b3c8756eb564cabf6e1c81&redirect_uri=http://localhost:8080/oauth2/login?type=kakao&response_type=code&scope=account_email,openId"><i><img-->
+										<a href="/oauth2/authorization/kakao"><i><img
 												th:src="@{/user/assets/images/icon_kakaotalk_login.png}"/></i>카카오톡</a>
 									</li>
 								</div>
@@ -56,7 +59,8 @@
 											th:src="@{/user/assets/images/icon_facebook_login.png}"/></i>페이스북</a></li>
 								</div>
 								<div class="col-4">
-									<li><a href="#"><i><img th:src="@{/user/assets/images/icon_naver_login.png}"/></i>네이버</a>
+									<li><a href="/oauth2/authorization/naver"><i><img
+											th:src="@{/user/assets/images/icon_naver_login.png}"/></i>네이버</a>
 									</li>
 								</div>
 							</ul>
@@ -72,6 +76,10 @@
 
 	<div class="login_register_wrap section" sec:authorize="isAuthenticated()">
 		<h3>이미 로그인 되어 있습니다.</h3>
+		<script>
+            // move location to /
+            window.location.href = "/";
+		</script>
 	</div>
 </div>
 
