--- a/src/main/resources/templates/user/content/main.html
+++ b/src/main/resources/templates/user/content/main.html
@@ -5,10 +5,27 @@
 
 <div layout:fragment="content" class="content">
 
+	<style>
+        /*mobile*/
+        @media (max-width: 767px) {
+            .product_info {
+                padding: 0 20px !important;
+            }
+
+            .mobile-mb-3 {
+                margin-bottom: 10px !important;
+            }
+
+            .mobile-mt-3 {
+                margin-top: 1.2em !important;
+            }
+        }
+	</style>
+
 	<div th:replace="/user/fragments/banner :: banner"></div>
 
 	<!-- START 최근 피드 -->
-	<div class="section small_pt pb_20">
+	<div class="section small_pt pb_20" th:if="${recentFeed.size() >= 3}">
 		<div class="container">
 			<div class="row justify-content-start">
 				<div class="col-md-6">
@@ -20,31 +37,36 @@
 			</div>
 			<div class="row shop_container main-card-group">
 
-				<div class="col-6 p-3">
+				<div class="col-6 p-3" th:with="feed=${recentFeed.get(0)}">
 					<div class="main-card">
+						<!--						div hover right top with category-->
+						<div class="hover-right-top">
+							<div class="hover-right-top-category" th:text="${feed.category}"></div>
+						</div>
+
 						<div class="img-container43">
-							<a href="/feed">
-								<img th:src="@{/user/assets/images/banner8.jpg}" class="w-100">
+							<a th:href="'/feed/' + ${feed.id}">
+								<img th:src="'/file/' + ${feed.thumbnailFileName}" class="w-100">
 							</a>
 						</div>
 
-						<div class="product_info">
-							<h6 class="recent_feed_title"><a href="/feed">컨텐츠 피드명 피드명 피드명 1111</a></h6>
-							<div class="recent_feed_subtitle mb-2">
-								공무원인 근로자는 법률이 정하는 자에 한하여 단결권·단체교섭권 ...
+						<div class="product_info mobile-mt-3">
+							<h6 class="recent_feed_title"><a th:href="'/feed/' + ${feed.id}"
+							                                 th:text="${feed.title}"></a></h6>
+							<div class="recent_feed_subtitle mb-2" th:text="${feed.descriptionNoHtml}">
 							</div>
-							<a href="#" class="btn btn-more rounded-pill">더 알아보기</a>
+							<a th:href="'/feed/' + ${feed.id}" class="btn btn-more rounded-pill mobile-mb-3">더 알아보기</a>
 						</div>
 					</div>
 				</div>
 
 				<div class="main-card-split col-6 p-3">
-					<div class="main-card">
+					<div class="main-card" th:with="feed=${recentFeed.get(1)}">
 						<div class="row">
 							<div class="col-6">
 								<div class="img-container43">
-									<a href="/feed">
-										<img th:src="@{/user/assets/images/banner8.jpg}">
+									<a th:href="'/feed/' + ${feed.id}">
+										<img th:src="'/file/' + ${feed.thumbnailFileName}">
 									</a>
 								</div>
 							</div>
@@ -52,25 +74,24 @@
 							<div class="col-6 p-3">
 								<div class="row">
 									<div class="product_info">
-										<div class="recent_feed_category">카테고리</div>
-										<h6 class="recent_feed_title"><a href="/feed">컨텐츠 피드명 피드명 피드명
-											2222</a></h6>
-										<div class="recent_feed_subtitle mb-4">
-											공무원인 근로자는 법률이 정하는 자에 한하여 단결권·단체교섭권 ...
+										<div class="recent_feed_category" th:text="${feed.category}"></div>
+										<h6 class="recent_feed_title"><a th:href="'/feed/' + ${feed.id}"
+										                                 th:text="${feed.title}"></a></h6>
+										<div class="recent_feed_subtitle mb-4" th:text="${feed.descriptionNoHtml}">
 										</div>
-										<a href="#" class="btn btn-more rounded-pill">더 알아보기</a>
+										<a th:href="'/feed/' + ${feed.id}" class="btn btn-more rounded-pill">더 알아보기</a>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 
-					<div class="main-card">
+					<div class="main-card" th:with="feed=${recentFeed.get(2)}">
 						<div class="row">
 							<div class="col-6">
 								<div class="img-container43">
-									<a href="/feed">
-										<img th:src="@{/user/assets/images/banner8.jpg}">
+									<a th:href="'/feed/' + ${feed.id}">
+										<img th:src="'/file/' + ${feed.thumbnailFileName}">
 									</a>
 								</div>
 							</div>
@@ -78,13 +99,12 @@
 							<div class="col-6 p-3">
 								<div class="row">
 									<div class="product_info">
-										<div class="recent_feed_category">카테고리</div>
-										<h6 class="recent_feed_title"><a href="/feed">컨텐츠 피드명 피드명 피드명
-											3333</a></h6>
-										<div class="recent_feed_subtitle mb-4">
-											공무원인 근로자는 법률이 정하는 자에 한하여 단결권·단체교섭권 ...
+										<div class="recent_feed_category" th:text="${feed.category}"></div>
+										<h6 class="recent_feed_title"><a th:href="'/feed/' + ${feed.id}"
+										                                 th:text="${feed.title}"></a></h6>
+										<div class="recent_feed_subtitle mb-4" th:text="${feed.descriptionNoHtml}">
 										</div>
-										<a href="#" class="btn btn-more rounded-pill">더 알아보기</a>
+										<a th:href="'/feed/' + ${feed.id}" class="btn btn-more rounded-pill">더 알아보기</a>
 									</div>
 								</div>
 							</div>
@@ -111,7 +131,7 @@
 
 			<div class="card-group flex-wrap">
 
-				<div class="card" th:each="feed: ${clothes_category}">
+				<div class="card hover-big" th:each="feed: ${clothes_category}">
 					<div class="img-container43">
 						<img th:src="'/file/' + *{feed.getThumbnailFileName()}" class="card-img-top rounded"
 						     alt="피드 썸네일 이미지">
@@ -132,6 +152,41 @@
 	</div>
 	<!-- END 카테고리별 피드 1-->
 
+
+	<!-- START 카테고리별 피드 2-->
+	<div class="section small_pt pb_20 mb-5">
+		<div class="container">
+			<div class="row justify-content-start">
+				<div class="col-md-6">
+					<div class="heading_s3 text-start">
+						<h2>전자기기 카테고리</h2>
+					</div>
+					<div class="small_divider clearfix"></div>
+				</div>
+			</div>
+
+			<div class="card-group flex-wrap">
+
+				<div class="card hover-big circle-top" th:each="feed: ${ele_category}">
+					<div class="img-container43">
+						<img th:src="'/file/' + *{feed.getThumbnailFileName()}" class="card-img-top circle-top"
+						     alt="피드 썸네일 이미지">
+					</div>
+					<div class="card-body">
+						<h5 class="card-title" th:text="${feed.title}"></h5>
+						<th:block>
+							<p class="card-text" th:text="${feed.description}">
+								<!--						   th:inline="text">-->
+								<!--							[[${#strings.abbreviate(feed.feed.description, 40)}]]-->
+							</p>
+						</th:block>
+						<a th:href="'/feed/' + *{feed.id}" class="btn btn-primary btn-more rounded-pill">더 알아보기</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- END 카테고리별 피드 2-->
 </div>
 
 
