모바일에서 관리자페이지 메뉴가 동작하지 않는 오류 해결

--- a/src/main/resources/templates/admin/layout/default_layout.html
+++ b/src/main/resources/templates/admin/layout/default_layout.html
@@ -60,4 +60,5 @@
 	<footer th:replace="~{/admin/fragments/footer :: footerFragment}"></footer>
 </div>
 </body>
+<script th:src="@{/admin/js/scripts.js}" crossorigin="anonymous"></script>
 </html>
